<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">万码千钧</string>
    <string name="action_welfare">图片</string>
    <string name="action_android">Android</string>
    <string name="action_scan">扫一扫</string>
    <string name="action_qq">跟我聊</string>
    <string name="action_about">关于</string>
    
    <string name="tab_welfare">Picture</string>
    <string name="tab_android">Android</string>
    <string name="tab_random">Random</string>
    <string name="tab_about">About</string>
    
    
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>
    <string name="name">万码千钧</string>
    <string name="github">https://github.com/mixinan</string>
    <string name="new_data">每日一干</string>
    <string name="type_data">分类干货</string>
    <string name="random_data">随机干货</string>
    <string name="about">关于</string>
    <string name="back">再按一次退出</string>
    <string name="daimajia"><u>代码家</u></string>
    <string name="gank"><u>干货集中营</u></string>
    <string name="drakeet"><u>drakeet</u></string>
    <string name="meizi"><u>妹子.gank.io</u></string>
    <string name="my_github"><u>我的GitHub</u></string>
    <string name="top">返回顶部</string>
    
    <array name="type">
        <item>福利</item>
        <item>Android</item>
        <item>iOS</item>
        <item>休息视频</item>
        <item>拓展资源</item>
        <item>前端</item>
        <item>瞎推荐</item>
        <item>App</item>
    </array>

</resources>
