<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item 
        android:id="@+id/action_welfare"
        android:showAsAction="ifRoom|collapseActionView"
        android:icon="@drawable/btn_zoom_page_normal"
        android:title="@string/top"/>
    <item 
        android:id="@+id/action_android"
        android:icon="@drawable/android"
        android:title="@string/action_android"/>
    <item 
        android:id="@+id/action_scan"
        android:icon="@drawable/scan"
        android:title="@string/action_scan"/>
    <item 
        android:id="@+id/action_qq"
        android:icon="@drawable/qq"
        android:title="@string/action_qq"/>
    <item 
        android:id="@+id/action_about"
        android:icon="@drawable/about"
        android:title="@string/action_about"/>

</menu>
